--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,10 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Make Bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Board name
+CONFIG_ZMK_KEYBOARD_NAME="Corne"
+
