--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,10 +6,10 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # Make Bluetooth stronger
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Board name
 CONFIG_ZMK_KEYBOARD_NAME="Corne"
 
 # Add mouse keymap
-CONFIG_ZMK_MOUSE=y
+# CONFIG_ZMK_MOUSE=y
