--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,7 +6,7 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # Make Bluetooth stronger
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Board name
 CONFIG_ZMK_KEYBOARD_NAME="Corne"
